[package]
authors = ["Dany Sluijk <dany@atlasdev.nl>"]
edition = "2018"
readme = "README.md"
name = "new"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-semihosting = { version = "0.5.3", features = ["exit"] }

[[bin]]
name = "new"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
