[package]
authors = ["Dany Sluijk <dany@atlasdev.nl>"]
edition = "2018"
readme = "README.md"
name = "new"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"
panic-abort= "0.3.2"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }

[[bin]]
name = "new"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
